장바구니 개발 및 소스 리펙토링

--- a/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/src/main/resources/templates/platform/mgmt/user/list.html
@@ -994,7 +994,7 @@ $(document).ready(function() {
 function doSearch(pageNumber)
 {
 	$("#pageNumber").val(JpUtilsString.defaultString(pageNumber, "1"));
-	$("#rowPerPage").val(JpUtilsString.defaultString($(".pagination-rowPerPage").val(), GLOBAL_CONST.ROW_PER_PAGE));
+	$("#rowPerPage").val(JpUtilsString.defaultString($(".pagination-rowPerPage").val(), 5));
 	
 	userTable.load();
 };
