--- a/src/main/resources/templates/portal/layout/iv/eu/parts/common/fragments/js.html
+++ b/src/main/resources/templates/portal/layout/iv/eu/parts/common/fragments/js.html
@@ -49,4 +49,5 @@
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
+<script th:src="@{/portal/js/portal.utils.fileuploader.js}"></script>
 <script th:src="@{/portal/js/portal.rfc.log.js}"></script>
