--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/main.html
@@ -175,7 +175,7 @@ $(window).resize($.debounce(100, function(e){
 	stickyPromotionBanner();
 }));
 
-let Promotion = {
+var Promotion = {
 	getPromotionBanner: function() {
 		// 진행중인 프로모션 배너 목록 가져오기
 		JpUtilsAjax.get({
@@ -192,25 +192,25 @@ let Promotion = {
 				}
 				
 				$.each(result, function(index, element) {
-					$('#slider-div').append('<a href="javascript:Promotion.popupView('+element.pseq+', '+element.width+', '+element.height+')"><img class="slick-img" src="/portal/iv/image/load?ulfSeq=' + element.uploadFileLists[0].uflSeq + '"></a>');
+					$('#slider-div').append('<a href="javascript:Promotion.popupView('+element.pseq+', '+element.width+', '+element.height+')"><img class="slick-img" src="/portal/iv/image/load?ulfSeq=' + element.uploadFileLists[0].uflSeq + '" onerror="Promotion.noimage(this);"></a>');
 				});
 				
 				// 슬라이더 옵션 셜정
 				$('#slider-div').slick({
 					slide: 'a'		//슬라이드 되어야 할 태그 ex) div, li, a 등
-					,infinite : true 	//무한 반복 옵션	 
-					,slidesToShow : 1		// 한 화면에 보여질 컨텐츠 개수
-					,slidesToScroll : 1		//스크롤 한번에 움직일 컨텐츠 개수
-					,speed : 1000	 	// 다음 버튼 누르고 다음 화면 뜨는데까지 걸리는 시간(ms)
-					,arrows : true 		// 옆으로 이동하는 화살표 표시 여부
-					//,dots : true 		// 스크롤바 아래 점으로 페이지네이션 여부
-					,autoplay : true		// 자동 스크롤 사용 여부
-					,autoplaySpeed : 3000 	// 자동 스크롤 시 다음으로 넘어가는데 걸리는 시간 (ms)
-					,pauseOnHover : true	// 슬라이드 이동	시 마우스 호버하면 슬라이더 멈추게 설정
-					,vertical : false		// 세로 방향 슬라이드 옵션
-					//,prevArrow : "<button type='button' class='slick-prev'>Previous</button>"	// 이전 화살표 모양 설정
-					//,nextArrow : "<button type='button' class='slick-next'>Next</button>"		// 다음 화살표 모양 설정
-					//,dotsClass : "slick-dots2" 	//아래 나오는 페이지네이션(점) css class 지정
+					,infinite: true 	//무한 반복 옵션	 
+					,slidesToShow: 1		// 한 화면에 보여질 컨텐츠 개수
+					,slidesToScroll: 1		//스크롤 한번에 움직일 컨텐츠 개수
+					,speed: 1000	 	// 다음 버튼 누르고 다음 화면 뜨는데까지 걸리는 시간(ms)
+					,arrows: true 		// 옆으로 이동하는 화살표 표시 여부
+					//,dots: true 		// 스크롤바 아래 점으로 페이지네이션 여부
+					,autoplay: true		// 자동 스크롤 사용 여부
+					,autoplaySpeed: 3000 	// 자동 스크롤 시 다음으로 넘어가는데 걸리는 시간 (ms)
+					,pauseOnHover: true	// 슬라이드 이동	시 마우스 호버하면 슬라이더 멈추게 설정
+					,vertical: false		// 세로 방향 슬라이드 옵션
+					//,prevArrow: "<button type='button' class='slick-prev'>Previous</button>"	// 이전 화살표 모양 설정
+					//,nextArrow: "<button type='button' class='slick-next'>Next</button>"		// 다음 화살표 모양 설정
+					//,dotsClass: "slick-dots2" 	//아래 나오는 페이지네이션(점) css class 지정
 				});
 			}
 		});	
@@ -233,6 +233,10 @@ let Promotion = {
 		ProgressBar.show();
 		
 		$("#FORM_promotionOrder").append(html.join("")).submit();
+	},
+	noimage: function(obj)
+	{
+		$(obj).prop("src", "/portal/img/common/blank.png");		
 	}
 };
 
