--- a/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -19,7 +19,7 @@
 				<span class="bold">*[[#{HQP_T_GUIDE_ORDER_UPLOAD_FORM1}]]</span><br/>
 				- A: [[#{HQP_T_GUIDE_ORDER_UPLOAD_FORM2}]]<br/>
 				- B: [[#{HQP_T_GUIDE_ORDER_UPLOAD_FORM3}]]
-				<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/iv/hq/parts/order/upload_form.png"/>
+				<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/iv/hq/parts/common/upload_form.png"/>
 			</div>
 		</div>
 		<div class="dropzone-bottom dropzone-click-zone">
@@ -974,17 +974,20 @@ let fgDoneSimulation = GLOBAL_CONST.NO;
 $(document).ajaxStop(function() {
 	if (JpUtilsString.equals(fgDoneSimulation, GLOBAL_CONST.NO))
 	{
-		if (JpUtilsString.equals("[[${simulationFrom}]]", "SB"))//시스뱅크 대리점재고 시스템에서 I/F 된 주문일 경우 로딩과 함께 시뮬레이션해 준다.
+		if (JpUtilsString.isNotEmpty("[[${simulationFrom}]]"))
 		{
-			doSimulation();
-		}
-		else if (JpUtilsString.equals("[[${simulationFrom}]]", "PROMOTION"))//프로모션 화면에서 넘어온 경우
-		{
-			doValidation();
+			if (JpUtilsString.equalsAny("[[${simulationFrom}]]", "SB", "CART"))//SB, CART 부터 주문 화면으로 이동한 경우 로딩과 함께 시뮬레이션
+			{
+				doSimulation();
+			}
+			else
+			{
+				doValidation();
+			};
+			
+			//시뮬레이션이 무한 반복되는 것을 방지하기 위해 상태를 변경해 줌		
+			fgDoneSimulation = GLOBAL_CONST.YES;			
 		};
-		
-		//시뮬레이션이 무한 반복되는 것을 방지하기 위해 상태를 변경해 줌		
-		fgDoneSimulation = GLOBAL_CONST.YES;		
 	};
 });
 </script>
