--- a/src/main/resources/templates/portal/iv/hq/parts/promotion/popup/view.html
+++ b/src/main/resources/templates/portal/iv/hq/parts/promotion/popup/view.html
@@ -1,92 +1,82 @@
-<!DOCTYPE html>
+<!DOCTYPE html>  
 <html
 	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{portal/layout/iv/hq/parts/popup/index}">  
 
-<head>
-<link rel="stylesheet" type="text/css" th:href="@{/portal/js/semantic/semantic.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/popup/basic.css}" />
-<script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery.cookie.js}"></script>
-<script th:src="@{/portal/js/jquery/jquery.fileDownload.js}"></script>
-<script th:src="@{/portal/js/portal.utils.download.js}"></script>
-<script src="/editor_html5/js/xfe_main.js"></script>
-<style>
-.pop-bottom {
-	width:100%;
-	height:45px;
-	padding: 10px 5px 5px 10px;
-	background-color: #000;
-	position:fixed;
-	bottom: 0px;
-}
-.pop-bottom label {
-	color:#fff;
-}
-
-.pop-bottom label.link {color: #fff; cursor: pointer;}
-.pop-bottom label.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
-
-.pop-top {
-	border-top: 6px solid #003081;
-}
-
-</style>
-</head>	
-<body style="overflow: hidden; margin:0; padding:0;">
-<div class="pop-top"></div>
-
-
-<div id="boardViwer" class="condition-area">
-	<form id="FORM_search" th:action="|${BASE_PATH}/promotion/list|" >
-	<input type="hidden" name="pSeq" th:value="*{pSeq}"/>
-
-	<table class="condition table-fixed">
-		<tbody>
-			<tr>
-				<th style="width: 100px;" ><span th:text="#{HQP_L_TITLE}"></span></th>
-				<td th:text="${promotion.title}"/>
-			</tr>
-			<tr>
-				<td colspan="2"><div id="xfe"></div></td>
-			</tr>
-			<tr th:style="${promotion?.uploadFileLists2.size() == 0 ? 'display:none;' : ''}">
-				<th th:text="#{HQP_L_ATTACHMENT}"/>
-				<td >
-					<div th:each="uploadFileList : ${promotion.uploadFileLists2}">
-						<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a><div class='split2'></div><span th:text="${uploadFileList.displayFileSize}"></span>
-					</div>
-				</td>
-			</tr>
-			<tr th:style="${promotion?.promotionItems.size() == 0 ? 'display:none;' : ''}">
-				<th th:text="대상자재"/>
-				<td >
-					<div class="split-row-more-compact"></div>
-					<button id="BTN_checkAll" type="button" th:text="#{HQP_B_SELECT_ALL}" class="small_button"></button>
-					<button id="BTN_order" type="button" th:text="#{HQP_B_ORDER2}" class="small_button"></button>
-					<div class="split-row-more-compact"></div>
-					<div style="display: block; height: 1px; background-color: #cccccc; margin-top:2px; margin-bottom:2px;"></div>
-					<div th:each="promotionItem : ${promotion.promotionItems}">
-						<!--<span th:text="${promotionItem.materialNo}"></span><div class='split2'></div><span th:text="부품명"></span>-->
-						<input type="checkbox" name="materialChk" class="custom-ui visible-item" th:value="${promotionItem.materialNo}" />
-						<label class="dealer-code" th:text="${promotionItem.materialNo}"></label><div class='split2'></div><span th:text="${promotionItem.materialText}"></span>
-					</div>				
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	</form>
-</div>
-<div id="bottom" class="pop-bottom">	
-	<div style="float: right;"><button id="BTN_close" type="button" th:text="#{HQP_B_CLOSE}"></button></div>	
-</div>
-<textarea id="htmlContent" th:text="${promotion?.htmlContent}" style="display:none;"></textarea>
+<th:block layout:fragment="content">
+	<style>
+	.pop-bottom {
+		width:100%;
+		height:45px;
+		padding: 10px 5px 5px 10px;
+		background-color: #000;
+		position:fixed;
+		bottom: 0px;
+	}
+	.pop-bottom label {
+		color:#fff;
+	}
+	
+	.pop-bottom label.link {color: #fff; cursor: pointer;}
+	.pop-bottom label.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
+	
+	.pop-top {
+		border-top: 6px solid #003081;
+	}
+	</style>
+	<script src="/editor_html5/js/xfe_main.js"></script>
+	
+	<div class="condition-area">
+		<form id="FORM_search" th:action="|${BASE_PATH}/promotion/list|" >
+		<input type="hidden" name="pSeq" th:value="*{pSeq}"/>
+	
+		<table class="condition table-fixed">
+			<tbody>
+				<tr>
+					<th style="width: 100px;" ><span th:text="#{HQP_L_TITLE}"></span></th>
+					<td th:text="${promotion.title}"/>
+				</tr>
+				<tr>
+					<td colspan="2"><div id="xfe"></div></td>
+				</tr>
+				<tr th:style="${promotion?.uploadFileLists2.size() == 0 ? 'display:none;' : ''}">
+					<th th:text="#{HQP_L_ATTACHMENT}"/>
+					<td >
+						<div th:each="uploadFileList : ${promotion.uploadFileLists2}">
+							<a class="link" th:text="${uploadFileList.fullOriginName}" th:downloadKey="${uploadFileList.downloadKey}"></a><div class='split2'></div><span th:text="${uploadFileList.displayFileSize}"></span>
+						</div>
+					</td>
+				</tr>
+				<tr th:style="${promotion?.promotionItems.size() == 0 ? 'display:none;' : ''}">
+					<th th:text="대상자재"/>
+					<td >
+						<div class="split-row-more-compact"></div>
+						<button id="BTN_checkAll" type="button" th:text="#{HQP_B_SELECT_ALL}" class="small_button"></button>
+						<button id="BTN_order" type="button" th:text="#{HQP_B_ORDER2}" class="small_button"></button>
+						<div class="split-row-more-compact"></div>
+						<div style="display: block; height: 1px; background-color: #cccccc; margin-top:2px; margin-bottom:2px;"></div>
+						<div th:each="promotionItem : ${promotion.promotionItems}">
+							<!--<span th:text="${promotionItem.materialNo}"></span><div class='split2'></div><span th:text="부품명"></span>-->
+							<input type="checkbox" name="materialChk" class="custom-ui visible-item" th:value="${promotionItem.materialNo}" />
+							<label class="dealer-code" th:text="${promotionItem.materialNo}"></label><div class='split2'></div><span th:text="${promotionItem.materialText}"></span>
+						</div>				
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		</form>
+	</div>
+	<div id="bottom" class="pop-bottom">	
+		<div style="float: right;"><button id="BTN_close" type="button" th:text="#{HQP_B_CLOSE}"></button></div>	
+	</div>
+	<textarea id="htmlContent" th:text="${promotion?.htmlContent}" style="display:none;"></textarea>
 <script>
 $(window).on("load", function() {
-	let height = $(document).outerHeight(true) - $(".pop-top").outerHeight(true) - $("#bottom").outerHeight(true) -200;
-	$("#xfe").height(height);
+	$("#xfe").height($(".xfeViewFrame ").contents().height() + $(".split-row.topbd").outerHeight(true));
+	
+	ProgressBar.hide();
 });
-
 /*
  * 에디터 생성.
  * 
@@ -112,10 +102,12 @@ $("#BTN_close").on("click", function() {
 	window.close();
 });
 
-let checkAll = false;
 $("#BTN_checkAll").on("click", function() {	
-	checkAll = (checkAll) ? false: true;	
-	$("input[name=materialChk]").prop("checked", checkAll);
+	let isCheckAll = $(this).prop("isCheckAll") ? false : true;
+	
+	$("input[name=materialChk]").prop("checked", isCheckAll);
+	
+	$(this).prop("isCheckAll", isCheckAll);	
 });
 
 $("#BTN_order").on("click", function() {
@@ -143,5 +135,4 @@ $("a[downloadKey]").on("click", function() {
 	PortalFileDownload.download($(this).attr("downloadKey"));
 });	
 </script>
-</body>
-</html>
+</th:block>
