--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/create/complaint_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/complaint/create/complaint_form.html
@@ -11,7 +11,7 @@
 		<div class="dropzone-area-top"></div>
 		<div class="dropzone-body dropzone-click-zone">
 			<div class="dropzone-click-zone" style="height:40.5px"></div>
-			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{EUP_M_0002}"></div>
 		</div>
 		<div class="dropzone-bottom dropzone-click-zone">
@@ -91,7 +91,7 @@
 	            <tr>
 	            	<td>1</td>
 	                <td><a href="#">image.jpg</a></td>
-	                <td><a href="#"><img src="/portal/img/x.png" style="width:10px;height:10px;" /></a></td>
+	                <td><a href="#"><img src="/portal/img/icon/x.png" style="width:10px;height:10px;" /></a></td>
 	            </tr>
 	            </tbody>
 	        </table>
@@ -771,7 +771,7 @@ function showFileList($thisObj)
 					tmpAppendStr += '<tr id="FILELIST_' + currTrId + '_' + j + '" >';	// FILELIST_TR식별자_번호
 					tmpAppendStr += '<td>' + (j + 1) + '</td>';	// No
 					tmpAppendStr += '<td>' + currLoopObj.orgFileNm.split(":")[j] + '</td>';
-					tmpAppendStr += '<td style="text-align:center;"><a href="#" onclick="javascript:deleteFile(' + j + ', \'' + currTrId + '\');"><img src="/portal/img/x.png" style="width:10px;height:10px;" /></a></td>';
+					tmpAppendStr += '<td style="text-align:center;"><a href="#" onclick="javascript:deleteFile(' + j + ', \'' + currTrId + '\');"><img src="/portal/img/icon/x.png" style="width:10px;height:10px;" /></a></td>';
 					tmpAppendStr += "</tr>";
 				}
 				
@@ -900,7 +900,7 @@ function deleteFile(delID, trId)
 				tmpAppendStr += '<tr id="FILELIST_' + trId + '_' + j + '" >';	// FILELIST_TR식별자_번호
 				tmpAppendStr += '<td>' + (j + 1) + '</td>';	// No
 				tmpAppendStr += '<td>' + currLoopObj.orgFileNm.split(":")[j] + '</td>';
-				tmpAppendStr += '<td style="text-align:center;"><a href="javascript:deleteFile(' + j + ', \"' + currLoopObj.fileTr + '\");"><img src="/portal/img/x.png" style="width:10px;height:10px;" /></a></td>';
+				tmpAppendStr += '<td style="text-align:center;"><a href="javascript:deleteFile(' + j + ', \"' + currLoopObj.fileTr + '\");"><img src="/portal/img/icon/x.png" style="width:10px;height:10px;" /></a></td>';
 				tmpAppendStr += "</tr>";
 			}
 			
