--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/order/create/order_form.html
@@ -11,7 +11,7 @@
 		<div class="dropzone-area-top"></div>
 		<div class="dropzone-body dropzone-click-zone">
 			<div class="dropzone-click-zone" style="height:40.5px"></div>
-			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{EUP_M_0002}"></div>
 			<div style="margin-left:15px;"><input type="checkbox" id="fgShowListPrice" name="fgShowListPrice" class="custom-ui" value="Y" checked><label>Show List Price</label></div>
 		</div>
@@ -88,7 +88,7 @@
 			</tr>
 			<tr>
 				<th>
-					<div th:text="#{EUP_L_0023}"></div><img src="/portal/img/icon_required.png" class="required" />
+					<div th:text="#{EUP_L_0023}"></div><img src="/portal/img/icon/required.png" class="required" />
 				</th><!-- Customer P.O. Number -->
 				<td>
 					<div class="input-area">
